--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ on:
 # 리전, 버킷 이름, CodeDeploy 앱 이름, CodeDeploy 배포 그룹 이름
 env:
   AWS_REGION: ap-east-1
-  S3_BUCKET_NAME: wonjar
+  S3_BUCKET_NAME: myblog-s3
   CODE_DEPLOY_APPLICATION_NAME: codedeploytest
   CODE_DEPLOY_DEPLOYMENT_GROUP_NAME: ckstn0225-group
   RESOURCE_PATH: ./src/main/resources/application.yml
