--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,8 +59,8 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET }}
+        aws-access-key-id: ${{ secrets.AWS_ACCESS }}
+        aws_secret_access-key: ${{ secrets.AWS_SECRET }}
         aws-region: ${{ env.AWS_REGION }}
 
     # (5) 빌드 결과물을 S3 버킷에 업로드
